# ad-project-api

./: .gitignore  Dockerfile  Jenkinsfile  README.md  cdihm.yml  client.py  main.py  optimize.py  prepare.py  pyproject.toml  requirements.txt
ansible/: docker-compose.yml
data/: y_test.npy
model/: ElasticNet_score.txt  GradientBoosting_model.pkl  LGBMRegressor_best_params.pkl  LGBMRegressor_score.txt  LinearRegression_model.pkl  RandomForest_best_params.pkl  RandomForest_score.txt  SVR_score.txt  dataset_encoder_boite.pkl  dataset_encoder_energie.pkl  dataset_scaler_nombredeportes.pkl
report/: report-20241128_202935.html
src/: client.py  main.py  optimize.py  prepare.py  train.py
src/data/: x_test.npy  x_train.npy  y_test.npy  y_train.npy
src/model/: ElasticNet_best_params.pkl  ElasticNet_best_params_results.csv  ElasticNet_model.pkl  GradientBoosting_best_params.pkl  GradientBoosting_best_params_results.csv  GradientBoosting_score.txt  LGBMRegressor_best_params.pkl  LGBMRegressor_best_params_results.csv  LGBMRegressor_model.pkl  Lasso_best_params.pkl  Lasso_best_params_results.csv  Lasso_model.pkl  Lasso_score.txt  LinearRegression_best_params_results.csv  LinearRegression_score.txt  RandomForest_best_params.pkl  RandomForest_best_params_results.csv  Ridge_best_params.pkl  Ridge_best_params_results.csv  Ridge_model.pkl  Ridge_score.txt  SVR_best_params.pkl  SVR_best_params_results.csv  SVR_model.pkl  XGBRegressor_best_params.pkl  XGBRegressor_best_params_results.csv  XGBRegressor_model.pkl  XGBRegressor_score.txt  dataset_encoder_carmodel.pkl  dataset_encoder_couleur.pkl  dataset_scaler_kilometer.pkl  dataset_scaler_power.pkl  dataset_scaler_price.pkl  dataset_scaler_year.pkl  results.csv
src/utils/: encoders_values_extractor.py
tests/: test_client_ElasticNet.py  test_client_GradientBoosting.py  test_client_LGBMRegressor.py  test_client_Lasso.py  test_client_LinearRegression.py  test_client_RandomForest.py  test_client_Ridge.py  test_client_SVR.py  test_client_XGBRegressor.py  test_client_current.py
tests/constants/: common.py
tests/data/: cars.py
