[project]
name = "ad_project_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Lefrancq", email = "david.lefrancq@gmail.com"},
]
dependencies = ["fastapi>=0.115.5", "uvicorn>=0.32.1", "numpy>=2.1.3", "pandas>=2.2.3", "scikit-learn>=1.5.2", "matplotlib>=3.9.2", "seaborn>=0.13.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/main.py"
prepare = "python src/prepare.py"
optimize = "python src/optimize.py"
train = "python src/train.py"