[project]
name = "ad_project_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Lefrancq", email = "david.lefrancq@gmail.com"},
]
dependencies = ["fastapi>=0.115.5", "uvicorn>=0.32.1", "numpy>=2.1.3", "pandas>=2.2.3", "scikit-learn>=1.5.2", "matplotlib>=3.9.2", "seaborn>=0.13.2", "xgboost>=2.1.3", "lightgbm>=4.5.0", "optuna>=4.1.0", "pytest>=8.3.3", "pytest-sugar>=1.0.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pytest.ini_options]
pythonpath = "."

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/main.py"
prepare = "python src/prepare.py"
optimize = "python src/optimize.py"
train = "python src/train.py"
client = "python src/client.py"
test = {shell = "python -c \"import datetime; print('Running tests ' + datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S')); import os; os.system('pytest tests/test_client_current.py -v --html=report/report-' + datetime.datetime.now().strftime('%Y%m%d_%H%M%S') + '.html --self-contained-html')\""}
testall = {shell = "python -c \"import datetime; print('Running tests ' + datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S')); import os; os.system('pytest tests/ -v --html=report/report-' + datetime.datetime.now().strftime('%Y%m%d_%H%M%S') + '.html --self-contained-html')\""}

[dependency-groups]
test = [
    "pytest-html>=4.1.1",
]
